plugins {
    id 'pl.allegro.tech.build.axion-release' version '1.14.2'
    id 'groovy'
    id 'maven-publish'
}

group = 'com.github.rundeck-plugins'

ext.rundeckVersion='6.0.0-SNAPSHOT'
defaultTasks 'clean','build'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'pl.allegro.tech.build.axion-release'
apply plugin: 'groovy'

sourceCompatibility = 17
targetCompatibility = 17
ext.rundeckPluginVersion= '1.2'

/**
 * Set this to a comma-separated list of full classnames of your implemented Rundeck
 * plugins.
 */
ext.pluginClassNames='io.github.valfadeev.rundeck.plugin.vault.VaultStoragePlugin'


scmVersion {
    ignoreUncommittedChanges = true
    tag {
        prefix = ''
        versionSeparator = ''
    }
}
project.version = scmVersion.version
// Override version for Grails 7 upgrade (bump to 1.3.17)
project.version = '1.3.17-grails7-upgrade-test'

repositories {
    mavenLocal()
    mavenCentral()
}

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare compile to extend from pluginLibs so it inherits the dependencies
    implementation{
        extendsFrom pluginLibs
    }
}

dependencies {
    // add any third-party jar dependencies you wish to include in the plugin
    // using the `pluginLibs` configuration as shown here:

    pluginLibs group: 'io.github.jopenlibs', name: 'vault-java-driver', version: '6.2.0', ext: 'jar'


    //the compile dependency won't add the rundeck-core jar to the plugin contents
    implementation group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion
    
    // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    
    testImplementation(
            [group: 'junit', name: 'junit', version: '4.12', ext: 'jar'],
            [group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3', ext: 'jar'],
            [group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3', ext: 'jar'],
            [group: 'org.mockito', name: 'mockito-core', version: '4.0.0', ext: 'jar'],
            [group: 'net.bytebuddy', name: 'byte-buddy', version: '1.12.1'],
            [group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.12.1'],
            [group: 'org.objenesis', name: 'objenesis', version: '3.2']

    )
    testImplementation "org.apache.groovy:groovy-all:4.0.29"
    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
    testImplementation "cglib:cglib-nodep:3.3.0"

}

configurations.all {
    resolutionStrategy {
        // Replace vulnerable commons-lang with secure commons-lang3
        dependencySubstitution {
            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.18.0')
        }
    }
}

// task to copy plugin libs to output/lib dir
task copyToLib(type: Copy) {
    into "$buildDir/output/lib"
    from configurations.pluginLibs
}


jar {
    from "$buildDir/output"
    manifest {
        def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')
        attributes 'Rundeck-Plugin-Name' : 'Vault Storage'
        attributes 'Rundeck-Plugin-Description' : 'This is a Storage Backend plugin for storing Key Store data in Vault.'
        attributes 'Rundeck-Plugin-Rundeck-Compatibility-Version': '3.0.2+'
        attributes 'Rundeck-Plugin-Tags': 'java,storage,vault'
        attributes 'Rundeck-Plugin-License': 'MIT'
        attributes 'Rundeck-Plugin-Source-Link': 'https://github.com/rundeck-plugins/vault-storage'
        attributes 'Rundeck-Plugin-Target-Host-Compatibility': 'all'
        attributes 'Rundeck-Plugin-Author': 'Rundeck, Inc.'
        attributes 'Rundeck-Plugin-Classnames': pluginClassNames
        attributes 'Rundeck-Plugin-File-Version': version
        attributes 'Rundeck-Plugin-Version': rundeckPluginVersion, 'Rundeck-Plugin-Archive': 'true'
        attributes 'Rundeck-Plugin-Libs': "${libList}"
        attributes 'Main-Class': "io.github.valfadeev.rundeck.plugin.vault.VaultStoragePlugin"
        attributes 'Class-Path': "${libList} lib/rundeck-core-${rundeckVersion}.jar"
    }
}
//set jar task to depend on copyToLib
jar.dependsOn(copyToLib)

test {
    useJUnitPlatform()
    
    // Java 17+ module access
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.github.rundeck-plugins'
            artifactId = 'vault-storage'
            from components.java
        }
    }
}
